--- a/3M/3M-limites.tex
+++ b/3M/3M-limites.tex
@@ -1178,7 +1178,7 @@ Voir les exercices.
 	\end{proof}
 	
 \end{coro}
-\subsection{Indéterminations -- types « $\dfrac{1}{0}$ » et « $\dfrac{0}{0}$ »}
+\subsection{Limites infinies -- types « $\dfrac{1}{0}$ » et « $\dfrac{0}{0}$ »}
 \begin{definition}
 	Type $«~\dfrac{1}{0}~»$
 	\tcblower
@@ -1500,7 +1500,7 @@ $\displaystyle\lim_{x \to -4^+} f(x) = \lim_{x \to -4^+} \dfrac{x}{x + 4} = \dfr
 $x = -4$ est une asymptote verticale de $f$
 \item Pour $x \to 1$ :
 
-$\displaystyle\lim_{x \to 1} f(x) = \dfrac{1}{1 + 5} = \dfrac{1}{5}$
+$\displaystyle\lim_{x \to 1} f(x) = \dfrac{1}{1 + 4} = \dfrac{1}{5}$
 
 $f$ n'a pas d'asymptote verticale en $x = 1$
 \end{itemize}
@@ -1571,7 +1571,7 @@ $
 \end{exemple}
 \subsection{Indéterminations avec de l'infini}
 
-Nous avons déjà traité les indéterminations du type $« ~\dfrac{\star}{0}~»$. Dans cette section, nous traitons les indéterminations qui font intervenir l'infini. Il faut recourir à des manipulations algébriques pour se ramener à des cas déterminés que nous savons traiter.
+Nous avons déjà traité l'indétermination du type $« ~\dfrac{0}{0}~»$. Dans cette section, nous traitons les indéterminations qui font intervenir l'infini. Il faut recourir à des manipulations algébriques pour se ramener à des cas déterminés que nous savons traiter.
 
 
 Voici une liste non exhaustive des différents types d’{\bfseries indéterminations} faisant intervenir l'infini que nous rencontrerons.
@@ -2024,7 +2024,7 @@ Approche graphique de la notion de limite
 
 
 \begin{activite}[label=acti:type10]
-	Indétermination $«\,\dfrac{1}{0}\,»$
+	Limite infinie du type $«\,\dfrac{1}{0}\,»$
 	\tcblower
 Soit $f$ la fonction réelle définie par
 \[
@@ -2275,27 +2275,27 @@ Dans les corrigés vous trouverez seulement des éléments de réponses. {\bfser
 \insertexo{5911p}{false}{both}
 
 \insertexo{hsytn}{false}{both}
-\subsubsection{Indétermination du type « $\dfrac{0}{0}$ » et « $\dfrac{1}{0}$ » }
+\subsubsection{Limites infinies « $\dfrac{1}{0}$ » et indétermination du type « $\dfrac{0}{0}$ »}
 
 \insertexo[exo:p1d]{vyj67}{false}{both}
 \insertexo{ac9v2}{false}{both}
 \insertexo{98752}{false}{both}
 \insertexo{gg7hk}{false}{both}
-\insertexo{f7dft}{false}{exo}
-\insertexo{u44h9}{false}{exo}
-\insertexo{pp62m}{false}{exo}
-\insertexo{b3p6g}{false}{exo}
-\insertexo{n41yn}{false}{exo}
-\insertexo{8j18h}{false}{exo}
-\insertexo{yhzh8}{false}{exo}
-\insertexo{9yqnb}{false}{exo}
+\insertexo{f7dft}{false}{both}
+\insertexo{u44h9}{false}{both}
+\insertexo{pp62m}{false}{both}
+\insertexo{b3p6g}{false}{both}
+\insertexo{n41yn}{false}{both}
+\insertexo{8j18h}{false}{both}
+\insertexo{yhzh8}{false}{both}
+\insertexo{9yqnb}{false}{both}
 %--> corrigés vérifiés après ici.
-\insertexo{k3bry}{false}{exo}
-\insertexo{1w6s3}{false}{exo}
-\insertexo{nxc2s}{false}{exo}
+\insertexo{k3bry}{false}{both}
+\insertexo{1w6s3}{false}{both}
+\insertexo{nxc2s}{false}{both}
 \subsubsection{Asymptotes verticales}
-\insertexo{89av7}{false}{exo}
-\insertexo{1w3pd}{false}{exo}
+\insertexo{89av7}{false}{both}
+\insertexo{1w3pd}{false}{both}
 \subsection{Limites en l'infini}
 \insertexo{x5h3r}{false}{exo}
 \insertexo{n9qmn}{false}{exo}
