--- a/3M/biblio-der.bib
+++ b/3M/biblio-der.bib
@@ -6,16 +6,27 @@
   publisher={Wiley},
   year={1984},
   edition={3},
-  isbn={9780471316596},
+%  isbn={9780471316596},
 }
 % Entry 1: Fundamentum de mathématique Analyse (CRM Éditions)
+@book{analyse,
+  title={Analyse},
+  publisher={CRM Éditions},
+  author={Commission {R}omande de {M}athématiques},
+  volume={Monographies de la {C}ommission {R}omande de {M}athématique 30},
+  year={2024},
+%  isbn={9782940621125},
+}
+
 @book{fundamentum_analyse,
   title={Fundamentum de mathématique Analyse},
   publisher={CRM Éditions},
-  author={Commission romande de mathématiques},
+  volume={Monographies de la {C}ommission {R}omande de {M}athématique 25},
+  author={Commission {R}omande de {M}athématiques},
   year={2018},
-  isbn={9782940621026},
+ % isbn={9782940621026},
 }
+
 
 
 
