--- a/packages/coursCollege.sty
+++ b/packages/coursCollege.sty
@@ -313,7 +313,7 @@ after skip=10pt,
         at={(ticklabel cs:0.6,0.8)},anchor=near ticklabel}
      }
   }
-\renewcommand\labelitemii{\bullet}
+
 
 \newcommand{\checkBox}{\fbox{\rule{0pt}{1em}\hspace{1em}}} % simple square
 \newcommand{\qrwithlabel}[2]{%
@@ -413,3 +413,5 @@ after skip=10pt,
 \newcommand{\da}[1]{\SI[mode=text]{#1}{}}
 \newcommand{\tunit}[2]{\SI[mode=text]{#1}{#2}}
 \newcommand{\nunit}[1]{\SI[mode=text]{}{#1}}
+\renewcommand\labelitemii{\bullet}
+\renewcommand\labelitemi{\bullet}
