--- a/src_exos/areny.tex
+++ b/src_exos/areny.tex
@@ -11,7 +11,7 @@
 \contenu{
 \tcblower
 Déterminer les dérivées suivantes et donner la réponse sans exposant négatif ou fractionnaire :
-\begin{tasks}
+\begin{tasks}(2)
 \task $(\sin(x^4 - \dfrac{1}{x}))$
 \task $(\cos(5\sqrt{x}))$
 \task $(\tan(\cos(x)))$
