--- a/src_exos/g75hx.tex
+++ b/src_exos/g75hx.tex
@@ -10,14 +10,14 @@
 
 \contenu{
 \tcblower
-Calculer, à partir de la définition de la fonction dérivée, la dérivée des fonctions réelles ci-dessous ; si possible, représenter \(f\) et \(f'\) dans un même repère et interpréter graphiquement le résultat :
+Calculer, à partir de la définition de la fonction dérivée, la dérivée des fonctions réelles ci-dessous ; représenter \(f\) et \(f'\) dans un même repère et interpréter graphiquement le résultat (sauf pour les points d) et f))~:
 \begin{tasks}(2)
   \task \(f(x)=7\).
   \task \(f(x)=x\).
   \task \(f(x)=3x\).
-  \task \(f(x)=ax+b\), avec \(a,b\in\mathbb{R}\).
+  \task \(f(x)=ax+b, \,\, a,b\in\mathbb{R}\).
   \task \(f(x)=x^2\).
-  \task \(f(x)=ax^2+bx+c\), avec \(a,b,c\in\mathbb{R}\).
+  \task \(f(x)=ax^2+bx+c, \,\, a,b,c\in\mathbb{R}\).
   \task \(f(x)=x^3\).
   \task \(f(x)=\sqrt{x}\).
   \task \(f(x)=\dfrac{1}{x}\).
