--- a/src_exos/h2mu9.tex
+++ b/src_exos/h2mu9.tex
@@ -13,6 +13,7 @@
 Expliquer intuitivement pourquoi si une fonction est constante sur un intervalle, alors sa dérivée est nulle sur tout l’intervalle.
 }
 \correction{
-
+	\tcblower
+La dérivée en un point correspond à la pente de la tangente en ce point. Si la droite est constante, la pente en tout point est nulle. 
 }
 
