--- a/src_exos/hhksj.tex
+++ b/src_exos/hhksj.tex
@@ -11,7 +11,7 @@
 \contenu{
 \tcblower
 Étudier les fonctions suivantes :
-\begin{tasks}
+\begin{tasks}(2)
 \task $f(x) = 2\cos(x) - \cos(2x)$
 \task $f(x) = \sin^2(x) - \sin(x)$
 \task $f(x) = 2\cos^3(x) - 3$
