--- a/src_exos/pbjwq.tex
+++ b/src_exos/pbjwq.tex
@@ -10,7 +10,7 @@
 
 \contenu{
 \tcblower
-Déterminer l’équation de la tangente à la fonction \(f:x\mapsto\dfrac{1}{x^2}\) au point \(\left(2;\dfrac{1}{4}\right)\).
+Déterminer l’équation de la tangente à \(f:x\mapsto\dfrac{1}{x^2}\) au point \(\left(2\,;\,\dfrac{1}{4}\right)\).
 }
 \correction{
 
