--- a/src_exos/rqd6n.tex
+++ b/src_exos/rqd6n.tex
@@ -11,8 +11,8 @@
 \contenu{
 \tcblower
 À partir de la définition de la dérivée de \(f\) en \(a\), calculer les dérivées \(f'(a)\) et interpréter graphiquement :
-\begin{tasks}
-  \task \(f(x)=x^2\) avec \(a=1\) puis \(a=3\).
+\begin{tasks}(2)
+  \task \(f(x)=x^2\) avec \(a=1\) puis \(a=~3\).
   \task \(f(x)=x^3\) avec \(a=2\).
   \task \(f(x)=x\) avec \(a=2\) puis \(a=5\).
   \task \(f(x)=3\) avec \(a=2\) puis \(a=7\).
