--- a/src_exos/uhfwb.tex
+++ b/src_exos/uhfwb.tex
@@ -16,20 +16,36 @@ Un mobile se déplace sur un axe selon la loi \(p(t)=4t-\dfrac{t^2}{2}\), où \(
   \begin{multicols}{2}
   \begin{enumerate}
     \item \(t_1=2\) et \(t_2=3\).
-    \item \(t_1=a\) et \(t_2=t\).
     \item \(t_1=2\) et \(t_2=t\).
-    \item \(t_1=t\) et \(t_2=t+h\).
+    \item \(t_1=a\) et \(t_2=t\).
     \item \(t_1=2\) et \(t_2=2+h\).
+    \item \(t_1=t\) et \(t_2=t+h\).
   \end{enumerate}
 \end{multicols}
   \task Calculer la vitesse instantanée du mobile :
+  \begin{multicols}{2}
   \begin{enumerate}
     \item à l’instant \(t=2\).
     \item à l’instant \(t\).
   \end{enumerate}
+\end{multicols}
 \end{tasks}
 }
 \correction{
-
+\begin{tasks}
+\task
+\begin{itemize}
+	\item
+	\item
+	\item
+	\item
+	\item
+\end{itemize}
+	\task
+	\begin{itemize}
+		\item
+		\item 
+	\end{itemize}
+\end{tasks}
 }
 
