--- a/src_exos/j2esz.tex
+++ b/src_exos/j2esz.tex
@@ -10,15 +10,28 @@
 
 \contenu{
 \tcblower
-   Calculer le taux de variation de la fonction \(f\) donnée entre les deux points donnés et interpréter graphiquement :
+   Calculer le taux de variation de la fonction (la pente donnée de la droite entre deux points du graphe de la fonction) \(f\) donnée entre les deux points donnés et interpréter graphiquement :
     \begin{tasks}
       \task \(f(x)=x^2,\ A=(1;f(1)),\ P=(2;f(2))\).
-      \task \(f(x)=x^2,\ A=(1;f(1)),\ P=(1{.}5;f(1{.}5))\).
+      \task \(f(x)=x^2,\ A=(1;f(1)),\ P=(1{,}5;f(1{,}5))\).
       \task \(f(x)=x^2,\ A=(-2;f(-2)),\ P=(2;f(2))\).
       \task \(f(x)=x^3,\ A=(1;f(1)),\ P=(2;f(2))\).
     \end{tasks}
 }
 \correction{
+	\tcblower
+	On calcule le rapport $\dfrac{A_y-P_y}{A_x-P_x}$.
+	\begin{tasks}
+\task $f(x) = x^2$, $A = (1; 1)$, $P = (2; 4)$
+$\frac{f(2) - f(1)}{2 - 1} = \frac{4 - 1}{1} = 3$
+\task $f(x) = x^2$, $A = (1; 1)$, $P = (1{,}5; 2{,}25)$
+$\frac{f(1{,}5) - f(1)}{1{,}5 - 1} = \frac{2{,}25 - 1}{0{,}5} = 2{,}5$
 
+\task $f(x) = x^2$, $A = (-2; 4)$, $P = (2; 4)$
+$\frac{f(2) - f(-2)}{2 - (-2)} = \frac{4 - 4}{4} = 0$
+
+\task $f(x) = x^3$, $A = (1; 1)$, $P = (2; 8)$
+$\frac{f(2) - f(1)}{2 - 1} = \frac{8 - 1}{1} = 7$
+\end{tasks}
 }
 
