--- a/3M/3M-calcDiff.tex
+++ b/3M/3M-calcDiff.tex
@@ -1011,9 +1011,10 @@ ou encore
 	\vspace{6cm}
 \end{exemple}
 \subsection{Dérivées des fonctions trigonométriques}
-Théorème [Dérivée du sinus]
 \begin{thm}
 Dérivées des fonctions trigonométriques
+
+(avec démonstration)
 \tcblower
 On a 
 \begin{itemize}
@@ -1021,12 +1022,53 @@ On a
 	\item $[\cos(x)]' = -\sin(x)$
 	\item $[\tan(x)]' = 1 + \tan^2(x) = \dfrac{1}{\cos^2(x)}$
 \end{itemize}
+
+\begin{proof}[$[\sin(x)]'=\cos(x)$]
+	On a l'identité trigonométrique suivante 
+	\[\sin(a)-\sin(x)=2\sin\left(\dfrac{a-x}{2}\right)\cos\left(\dfrac{a+x}{2}\right)\]
+
+	On procède au changement de variable $a=x+h$. On obtient
+	
+	$\sin(x+h)-\sin(x)=2\sin\left(\dfrac{h}{2}\right)\cos\left(x+\dfrac{h}{2}\right)$
+
+	On calcule la dérivée avec cette identité : 
+
+	\begin{align*}
+	[\sin(x)']&=\lim_{h\to 0}\dfrac{\sin(x+h)-\sin(x)}{h}\\
+		  &=\lim_{h\to 0}\dfrac{2\sin\left(\dfrac{h}{2}\right)\cos\left(x+\dfrac{h}{2}\right)}{h}\\
+		  &=\lim_{h\to 0}\dfrac{\sin\left(\dfrac{h}{2}\right)}{\frac{h}{2}}\cos\left(x+\dfrac{h}{2}\right)\\
+		  &=\lim_{\frac{h}{2}\to 0}\dfrac{\sin\left(\dfrac{h}{2}\right)}{\frac{h}{2}}\lim_{h\to 0}\cos\left(x+\dfrac{h}{2}\right)\\
+		  &= 1\cdot \cos(x)\\
+		  &=\cos(x).
+\end{align*}
+\end{proof}
+
+\begin{proof}[$[\cos(x)]'=-\sin(x)$]
+
+	On utilise les relations
+	\[
+		\cos(x)=\sin\left(\dfrac{\pi}{2}-x\right)\quad\text{et}\quad
+			\cos\left(\dfrac{\pi}{2}-x\right)=\sin(x) 
+		\]
+On a par la formule de dérivation d'une fonction composée et la dérivée du sinus~:
+
+$
+	\cos'(x)=\left(\sin\left(\frac{\pi}{2}-x\right)\right)'
+		=\cos\left(\frac{\pi}{2}-x\right)\cdot (-1)
+		=-\cos\left(\frac{\pi}{2}-x\right)
+		=-\sin(x)$
+
+\end{proof}
+
+\begin{proof}[$[\tan(x)]'$]
+À faire en exercice.	
+\end{proof}
 \end{thm}
 
 
 \begin{notation}
 	\tcblower
-De même que pour $[\sin(x)]^2 = \sin^2(x)$ on note plus simplement $[\sin(x)]' = \sin'(x)$, $[\cos(x)]' = \cos'(x)$ et $[\tan(x)]' = \tan'(x)$.
+De même que qu'on écrit $[\sin(x)]^2 = \sin^2(x)$, on note plus simplement $[\sin(x)]' = \sin'(x)$, $[\cos(x)]' = \cos'(x)$ et $[\tan(x)]' = \tan'(x)$.
 \end{notation}
 \begin{exemple}
 	$[\sin(-20x^3 + x)]'$
@@ -1035,7 +1077,10 @@ On utilise la formule de dérivation de la composition de fonctions.
 
 $\sin(-20x^3 + x) = g(f(x))$ avec $f(x) = -20x^3 + x$ et $g(x) = \sin(x)$
 
-$[\sin(-20x^3 + x)]' = \cos(-20x^3 + x) \cdot (-20x^3 + x)' = \cos(-20x^3 + x) \cdot (-60x^2 + 1)$
+$\begin{aligned}
+	[\sin(-20x^3 + x)]' &= \cos(-20x^3 + x) \cdot (-20x^3 + x)'\\
+			    &= \cos(-20x^3 + x) \cdot (-60x^2 + 1)
+\end{aligned}$
 
 
 \end{exemple}
@@ -1047,8 +1092,13 @@ On utilise la formule de dérivation de la composition de fonctions.
 
 $\cos^5(x) = [\cos(x)]^5 = g(f(x))$ avec $f(x) = \cos(x)$ et $g(x) = x^5$
 
-$[\cos^5(x)]' =$
-$[[\cos(x)]^5]' = 5[\cos(x)]^4 \cdot [\cos(x)]' = 5[\cos(x)]^4 \cdot [-\sin(x)] = 5[-\cos(x)]^4 \sin(x)$
+$\begin{aligned}
+	[\cos^5(x)]' &=
+[[\cos(x)]^5]'\\ 
+		     &= 5[\cos(x)]^4 \cdot [\cos(x)]'\\
+		     &= 5[\cos(x)]^4 \cdot [-\sin(x)]\\
+		     &= -5\cos^4(x) \sin(x)
+\end{aligned}$
 \end{exemple}
 
 \begin{exemple}
@@ -1056,7 +1106,9 @@ $[\sin^3(x^2 - 1)]'$
 	\tcblower
 On utilise la formule de dérivation de la composition de fonctions. 
 
-$\sin^3(x^2 - 1) = [\sin(x^2 - 1)]^3 = g(f(x))$ avec $f(x) = \sin(x^2 - 1)$ et $g(x) = x^5$
+$\sin^3(x^2 - 1) = [\sin(x^2 - 1)]^3 = g(f(x))$ avec $f(x) = \sin(x^2 - 1)$ et $g(x) = x^3$
+
+On a 
 
 $[[\sin(x^2 - 1)]^3]' = 3[\sin(x^2 - 1)]^2 \cdot [\sin(x^2 - 1)]'$
 
@@ -1064,7 +1116,11 @@ et on doit recommencer pour dériver $[\sin(x^2 - 1)]'$ :
 
 $[\sin(x^2 - 1)]' = \cos(x^2 - 1) \cdot (x^2 - 1)' = \cos(x^2 - 1) \cdot (2x)$
 
-d'où enfin : $[[\sin(x^2 - 1)]^3]' = 3[\sin(x^2 - 1)]^2 \cos(x^2 - 1) \cdot 2x = 6x\sin^2(x^2 - 1)\cos(x^2 - 1)$
+d'où enfin : 
+
+$\begin{aligned}
+	[[\sin(x^2 - 1)]^3]' &= 3[\sin(x^2 - 1)]^2 \cos(x^2 - 1) \cdot 2x\\ &= 6x\sin^2(x^2 - 1)\cos(x^2 - 1)
+\end{aligned}$
 \end{exemple}
 
 \subsection{Angle entre deux courbes}
@@ -1189,6 +1245,17 @@ Un résultat identique est valable pour un minimum, il sera démontré en exerci
 
 	Si $f(a)~=~f(b)~=~0$, alors il existe (au moins un) $c\in] a;b[$ tel que 
 	\[f'(c)=0.\]
+	\begin{proof}
+		Si $f$ est constante alors cela est évident.
+
+		Autrement, on peut supposer qu'il existe $x\in \interval{a}{b}$ tel que $f(x)>0$ ou $f(x)<0$. On traite le cas $f(x)>0$ (le cas $f(x)<0$ est laissé en exercice).  
+
+Par la théorème de la valeur intermédiaire, il existe $c\in \interval{a}{b}$ tel que $f(c)$ est un maximum de $f$ sur $\interval{a}{b}$. 
+
+Dans notre cas, $c\neq a,b$ et donc $f(c)$ est un maximum de $f$ sur $\ointerval{a}{b}$ (pourquoi est-ce que $c\neq a,b$?).
+
+Par la proposition \ref{prop:max}, $f'(c)=0$.  
+	\end{proof}
 \end{thm}
 \begin{thm}
 	Thm des accroissements finis
@@ -1197,6 +1264,32 @@ Un résultat identique est valable pour un minimum, il sera démontré en exerci
 	\tcblower
 	Soit $f$ une fonction dérivable sur $] a;b[$ et continue sur $[a;b]$, alors il existe (au moins un) $c\in ]a;b[$ tel que 
 	\[f'(c)=\dfrac{f(b)-f(a)}{b-a}.\]
+	
+	\begin{proof}
+		On définit la fonction affine (une droite!) $s:\interval{a}{b}\longrightarrow \mathbb{R}$ 
+		\[s(x)=f(a)+\dfrac{f(b)-f(a)}{b-a}(x-a)\]
+
+		Notons que $s(a)=f(a)$ et $s(b)=f(b)$ et que $s'(x)=\dfrac{f(b)-f(a)}{b-a} (\diamond)$.
+
+	On considère la fonction 
+
+	\[d(x)=f(x)-s(x).\]
+
+	On a que $d$ est continue sur $\interval{a}{b}$, car $f$ et $s$ le sont (différence de fonctions continues). De la même manière, elle est dérivable sur $\ointerval{a}{b}$.  
+
+	Par ailleurs, 
+	\begin{align*}
+		d(a)&=f(a)-s(a)=f(a)-f(a)=0\\
+		d(b)&=f(b)-s(b)=f(b)-f(b)=0
+	\end{align*}
+
+	La fonction $d$ satisfait toutes les hypothèses du Théorème de Rolle. Ainsi, il existe $c\in \ointerval{a}{b}$ tel que $d'(c)=0$. On obtient
+	
+	$\begin{aligned}d'(c)=0 &\iff f'(c)-s'(c)=0\iff f'(c)=s'(c)\\
+	&\iff f'(c)=\dfrac{f(b)-f(a)}{b-a}.
+	\end{aligned}$
+
+	\end{proof}
 \end{thm}
 \subsection{Fonctions croissantes et décroissantes}
 Maintenant que l'on a une bonne idée de ce que représente la dérivée, on comprend intuitivement que 
@@ -1233,15 +1326,43 @@ La fonction $f(x)=x^2$ est décroissante sur l'intervalle $]-\infty;0]$ et crois
 	\tcblower
 	La fonction $f(x)=x^3$ est croissante sur $\mathbb{R}$.	
 \end{exemple}
-On va démontrer ces résultats en exercice.
+
+Le théorème suivant est une conséquence directe du Théorème des accroissements finis.
+
 \begin{thm}
+	Relation entre la dérivée et la monotonie d'une fonction
+
+	(avec démonstration)
 	\tcblower
-	Soit $f$ une fonction dérivable sur un intervalle $]a;b[$, alors  
+	Soit $f$ une fonction dérivable sur un intervalle $I=]a;b[$, alors  
 	\begin{itemize}
 		\item Si $f'(x)>0$ pour tout $x\in I$, alors $f$ est strictement croissante sur $I$;
 		\item Si $f'(x)<0$ pour tout $x\in I$, alors $f$ est strictement décroissante sur $I$;
 		\item Si $f'(x)=0$ pour tout $x\in I$, alors $f$ est constante sur $I$.
 	\end{itemize}
+	\begin{proof}
+		Soit $x_1,x_2\in \ointerval{a}{b}$ avec $x_1<x_2$. Par le théorème des accroissement finis, il existe $c\in\ointerval{x_1}{x_2}$ tel que 
+		\[f'(c)=\dfrac{f(x_2)-f(x_1)}{x_2-x_1}\]
+		d'où
+		\[f'(c)\cdot (x_2-x_1)=f(x_2)-f(x_1)\]
+		On note que $(x_2-x_1)$ est toujours positif (pourquoi~?).
+		\begin{itemize}
+			\item Dans l'hypothèse d'une dérivée srictement positive sur $I$,
+
+				on a $0<f'(c)$, alors 
+				\[0<f'(c)\cdot (x_2-x_1)=f(x_2)-f(x_1),\]
+				donc $0<f(x_2)-f(x_1) \iff f(x_1)<f(x_2)$. On a choisi $x_1<x_2$ quelconques, donc $f$ est strictement croissante sur $I$. 
+			\item Dans l'hypothèse d'une dérivée srictement négative sur $I$, 
+
+				on a $0>f'(c)$, alors 
+				\[0>f'(c)\cdot (x_2-x_1)=f(x_2)-f(x_1),\]
+				donc $0>f(x_2)-f(x_1) \iff f(x_1)>f(x_2)$. On a choisi $x_1<x_2$ quelconques, donc $f$ est strictement décroissante sur $I$. 
+			\item Dans l'hypothèse d'une dérivée nulle sur $I$, on a $f'(c)=0$, alors 
+				\[0=f'(c)\cdot (x_2-x_1)=f(x_2)-f(x_1),\]
+				donc $f(x_2)-f(x_1)=0 \iff f(x_2)=f(x_1)$. On a choisi $x_1<x_2$ quelconques, donc $f$ est constante sur $I$. 
+		\end{itemize}
+
+	\end{proof}
 \end{thm}
 \begin{formule}
 	\tcblower
